added a bit with Ivan's suggestions

--- a/practice.tex
+++ b/practice.tex
@@ -197,16 +197,16 @@ $$2^n \geq n$$
 Induction Step:\\
 \begin{align*}
 2^{n+1} &\geq  n+1\\
-2 \times 2^n &\geq n + 1
+2^n &\geq \dfrac{n + 1}{2}
 \end{align*}
 By our Induction Hypothesis we have that $2^n \geq n$,
-so do we known that $2 \times 2^n \geq n+1$?  Do natural logs help us any here?
+so $2^n \geq \dfrac{n+1}{2}$ since $n > \dfrac{n+1}{2}$
 \newpage
 
 \itep
 Show that if $e, g \in G$ are identity elements, then $e = g$.
 \\
-Let $a \in G$, then:\\
-$ ea = a$ and $ga = a$ so $ea = ga$, hence $e = g$
+Let $a \in G$, then, WLOG:\\
+$ea = a$ and $ga = a$ so $ea = ga$, hence $e = g$
 \end{enumerate}
 \end{document}
