removed induction proof for general deMorgan laws

--- a/ps1.tex
+++ b/ps1.tex
@@ -153,12 +153,12 @@ We can say that $A^c \cap B^c = (((A^c) \cap (B^c))^c)^c$, which is in the form 
 \\
 \item Draw Venn diagrams to illustrate the two laws
 \begin{figure}[H]
-	\includegraphics[width=\linewidth]{intersection.png}
+	\includegraphics{intersection.png}
 	\caption{$(A \cap B)^c = A^c \cup B^c$}
 	\label{fig:venn_intersection}
 \end{figure}
 \begin{figure}
-	\includegraphics[width=\linewidth]{union.png}
+	\includegraphics{union.png}
 	\caption{$(A \cup B)^c = A^c \cap B^c$}
 	\label{fig:venn_union}
 \end{figure}
@@ -167,39 +167,13 @@ We can say that $A^c \cap B^c = (((A^c) \cap (B^c))^c)^c$, which is in the form 
 \benu
 \item $(A_1 \cap A_2 \cap \dots \cap A_n)^c = A_1^c \cup A_2^c \cup \dots \cup A_n^c$
 \\
-Induction on $n$\\
-Base Step: n = 2, See (b) above.
-\\
-Induction Hypothesis:
-\\$(A_1 \cap A_2 \cap \dots \cap A_n)^c = A_1^c \cup A_2^c \cup \dots \cup A_n^c$
-\\Induction Step:\\
-$(A_1 \cap A_2 \cap \dots \cap A_{n+1})^c = A_1^c \cup A_2^c \cup \dots \cup A_{n+1}^c$\\
-Or, $(A_1 \cap A_2 \cap \dots \cap A_n)^c \cup A_{n+1} = A_1^c \cup A_2^c \cup \dots \cup A_{n+1}^c$\\
-Let $B = (A_1 \cap A_2 \cap \dots \cap A_{n})$\\
-and $B'= A_1^c \cup A_2^c \cup \dots \cup A_{n}^c$\\
-Our Induction then becomes:
-%$(
-
 \item $(A_1 \cup A_2 \cup \dots \cup A_n)^c = A_1^c \cap A_2^c \cap \dots \cap A_n^c$
 \\
-Induction on $n$\\
-Base Step: n = 2, See (b) above.
-\\
-Induction Hypothesis:
-\\$(A_1 \cup A_2 \cup \dots \cup A_n)^c = A_1^c \cap A_2^c \cap \dots \cap A_n^c$
-\\Induction Step:\\
-$(A_1 \cup A_2 \cup \dots \cup A_{n+1})^c = A_1^c \cap A_2^c \cap \dots \cap A_{n+1}^c$\\
-Or, $(A_1 \cup A_2 \cup \dots \cup A_n)^c \cap A_{n+1} = A_1^c \cap A_2^c \cap \dots \cap A_{n+1}^c$\\
-Let $B = (A_1 \cup A_2 \cup \dots \cup A_{n})$\\
-and $B'= A_1^c \cap A_2^c \cap \dots \cap A_{n}^c$\\
-Our Induction then becomes:
-%$(
 
 \eenu
 \eenu 
 
 \newpage
-
 \itep 3\\
 Recast the following English sentences in mathematics, using correct mathematical grammar.  Preserve their meaning
 \\
