--- a/ps2.tex
+++ b/ps2.tex
@@ -166,7 +166,7 @@ $$d_N(fp, fq) = d_M(p,q).$$
 If there exists an isometry from $M$ to $N$ then $M$ and $N$ are said to be isometric, $M \equiv N$.  You might have two copies of a unit equilateral triangle, one centered at the origin and one centered elsewhere.  They are isometric.  Isometric metric spaces are indistinguishable as metric spaces.
 \benu
 \item Prove that every isometry is continuous
-\item Prove that everi isometry is a homeomorphism
+\item Prove that every isometry is a homeomorphism
 \item Prove that $[0,1]$ is not isometric to $[0,2]$.
 \eenu
 
@@ -201,7 +201,7 @@ Is $\mbQ$ homemorphic to $\mbN$?  Explain.
 
 
 \itep 30\\
-A sequence $(x_n)$ in $\mbR$ \textbf{increases} if $n< m$ implies $x_n \leq x_m$.  It \textbf{strictly increases} if $n < m$ implies $x_n < x_m$.  It \textbf{decreases} or \textbf{strict decreases} if $n < m$ always implies $x_n \geq x_m$ or always implies $x_n > x_m$.  A sequence is monotone if it increases or it decreases.
+A sequence $(x_n)$ in $\mbR$ \textbf{increases} if $n< m$ implies $x_n \leq x_m$.  It \textbf{strictly increases} if $n < m$ implies $x_n < x_m$.  It \textbf{decreases} or \textbf{strict decreases} if $n < m$ always implies $x_n \geq x_m$ or always implies $x_n > x_m$.  A sequence is \textbf{monotone} if it increases or it decreases.
 \benu
 \item Prove that every sequence in $\mbR$ which is monotone and bounded converges in $\mbR$
 \item Prove that this monotone sequence condition is equivalent to the least upper bound property
